--- a/tests/integration/hpe.conf
+++ b/tests/integration/hpe.conf
@@ -3,69 +3,72 @@ ssh_hosts_key_file = /root/.ssh/known_hosts
 logging = DEBUG
 hpe3par_debug = False
 suppress_requests_ssl_warnings = False
-host_etcd_ip_address = 192.168.68.33
+host_etcd_ip_address = 15.213.64.165
 host_etcd_port_number = 2379
-hpedockerplugin_driver = hpedockerplugin.hpe.hpe_3par_iscsi.HPE3PARISCSIDriver
-hpe3par_api_url = https://192.168.67.2:8080/api/v1
+#hpedockerplugin_driver = hpedockerplugin.hpe.hpe_3par_iscsi.HPE3PARISCSIDriver
+hpedockerplugin_driver = hpedockerplugin.hpe.hpe_3par_fc.HPE3PARFCDriver
+hpe3par_api_url = https://15.213.68.203:443/api/v1
 hpe3par_username = 3paradm
-hpe3par_password = 3pardata
-san_ip = 192.168.67.2
+hpe3par_password = 3pardata@123
+san_ip = 15.213.68.203
 san_login = 3paradm
-san_password = 3pardata
-hpe3par_cpg = Docker_CI
-hpe3par_snapcpg = Docker_CI
-hpe3par_iscsi_ips = 192.168.71.253
-hpe3par_iscsi_chap_enabled = True
-use_multipath = True
+san_password = 3pardata@123
+hpe3par_cpg = demo11
+hpe3par_snapcpg = demo11
+#hpe3par_iscsi_chap_enabled = True
+#use_multipath = True
 #enforce_multipath = True
-mount_conflict_delay = 30
+#mount_conflict_delay = 30
 
 [backend2]
-hpedockerplugin_driver = hpedockerplugin.hpe.hpe_3par_iscsi.HPE3PARISCSIDriver
-hpe3par_api_url = https://192.168.67.7:8080/api/v1
+hpedockerplugin_driver = hpedockerplugin.hpe.hpe_3par_fc.HPE3PARFCDriver
+hpe3par_api_url = https://15.213.71.140:443/api/v1
 hpe3par_username = 3paradm
 hpe3par_password = 3pardata
-san_ip = 192.168.67.7
+san_ip = 15.213.71.140
 san_login = 3paradm
 san_password = 3pardata
-hpe3par_cpg = docker_cpg
-hpe3par_snapcpg = docker_cpg
-hpe3par_iscsi_ips = 192.168.68.203,192.168.68.201
-hpe3par_iscsi_chap_enabled = True
-use_multipath = True
+hpe3par_cpg = arshad_ssd
+hpe3par_snapcpg = arshad_ssd
+#hpe3par_iscsi_chap_enabled = True
+#use_multipath = True
 #enforce_multipath = True
-mount_conflict_delay = 30
+#mount_conflict_delay = 30
 
 [backend3]
 hpedockerplugin_driver = hpedockerplugin.hpe.hpe_3par_fc.HPE3PARFCDriver
-hpe3par_api_url = https://192.168.67.7:8080/api/v1
+hpe3par_api_url = https://15.213.71.140:443/api/v1
 hpe3par_username = 3paradm
 hpe3par_password = 3pardata
-san_ip = 192.168.67.7
-#san_ip = 192.168.67.2
+san_ip = 15.213.71.140
 san_login = 3paradm
 san_password = 3pardata
-hpe3par_cpg = docker_cpg
-hpe3par_snapcpg = docker_cpg
-#hpe3par_iscsi_ips = 192.168.68.203,192.168.68.201
-#hpe3par_iscsi_ips = 192.168.71.253
-hpe3par_iscsi_chap_enabled = True
-use_multipath = True
+hpe3par_cpg = arshad_ssd
+hpe3par_snapcpg = arshad_ssd
+#hpe3par_iscsi_chap_enabled = True
+#use_multipath = True
 #enforce_multipath = True
-mount_conflict_delay = 30
+#mount_conflict_delay = 30
 
-[backend4]
-hpedockerplugin_driver = hpedockerplugin.hpe.hpe_3par_iscsi.HPE3PARISCSIDriver
-hpe3par_api_url = https://192.168.67.7:8080/api/v1
-hpe3par_username = dockerciuser
-hpe3par_password = dockerciuser@123
-san_ip = 192.168.67.7
-san_login = dockerciuser
-san_password = dockerciuser@123
-hpe3par_cpg = docker_cpg
-hpe3par_snapcpg = docker_cpg
-hpe3par_iscsi_ips = 192.168.68.203,192.168.68.201
-hpe3par_iscsi_chap_enabled = True
-use_multipath = True
-#enforce_multipath = True
-mount_conflict_delay = 30
+[ActivePassiveRepBackend]
+ssh_hosts_key_file = /root/.ssh/known_hosts
+hpedockerplugin_driver = hpedockerplugin.hpe.hpe_3par_fc.HPE3PARFCDriver
+hpe3par_api_url = https://15.213.68.207:443/api/v1
+hpe3par_username = vrops
+hpe3par_password = vrops123
+san_ip = 15.213.68.207
+san_login = vrops
+san_password = vrops123
+hpe3par_cpg = arshad_ssd
+hpe3par_snapcpg = arshad_ssd
+backend_id = S2928
+replication_device = backend_id:S3127,
+                    replication_mode:synchronous,
+                    cpg_map:arshad_ssd:arshad_prim,
+                    snap_cpg_map:arshad_ssd:arshad_snap,
+                    hpe3par_api_url:https://15.213.71.156:443/api/v1,
+                    hpe3par_username:3paradm,
+                    hpe3par_password:3pardata,
+                    san_ip:15.213.71.156,
+                    san_login:3paradm,
+                    san_password:3pardata
